--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@
 TURBINE_GRAPHQL_ENDPOINT=https://apollo.turbine.netrise.io/graphql/v3
 AUTH0_AUDIENCE=https://prod.turbine.netrise.io/
 AUTH0_DOMAIN=https://authn.turbine.netrise.io
-AUTH0_CLIENT_ID=<client_secret>
-AUTH0_CLIENT_SECRET=<client_id>
+AUTH0_CLIENT_ID=<client_id>
+AUTH0_CLIENT_SECRET=<client_secret>
 AUTH0_ORGANIZATION_ID=<org_id>
 AUTH0_ORGANIZATION_NAME=<org_name>
