Update environment variable names in .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
 # Purpose: Store environment variables for your Python application
 # These env vars will load into the OS environment at runtime
-TURBINE_GRAPHQL_ENDPOINT=https://apollo.turbine.netrise.io/graphql/v3
-AUTH0_AUDIENCE=https://prod.turbine.netrise.io/
-AUTH0_DOMAIN=https://authn.turbine.netrise.io
-AUTH0_CLIENT_ID=<client_secret>
-AUTH0_CLIENT_SECRET=<client_id>
-AUTH0_ORGANIZATION_ID=<org_id>
-AUTH0_ORGANIZATION_NAME=<org_name>
+endpoint=https://apollo.turbine.netrise.io/graphql/v3
+audience=https://prod.turbine.netrise.io/
+domain=https://authn.turbine.netrise.io
+client_id=<client_id>
+client_secret=<client_secret>
+organization_id=<org_id>
