--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "netrise-turbine-sdk"
-version = "0.1.8"
+version = "0.1.9"
 description = "Turbine GraphQL Python SDK (generated via ariadne-codegen)"
 authors = ["NetRise <anthony.feddersen@netrise.io>"]
 readme = "README.md"
@@ -10,14 +10,14 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.12,<4.0"
+python = ">=3.12"
 httpx = ">=0.27.0,<1.0.0"
 pydantic = ">=2.0.0,<3.0.0"
 python-dotenv = ">=1.0.0,<2.0.0"
 
 [tool.poetry.group.dev.dependencies]
-ariadne-codegen = ">=0.17.0,<0.18.0"
-graphql-core = "==3.2.0"
+ariadne-codegen = {version = ">=0.17.0,<0.18.0", python = "<4"}
+graphql-core = {version = "==3.2.0", python = "<4"}
 pytest = ">=8.0.0,<9.0.0"
 
 [tool.ariadne-codegen]
