--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "netrise-turbine-sdk"
-version = "0.1.9"
+version = "0.1.10"
 description = "Turbine GraphQL Python SDK (generated via ariadne-codegen)"
 authors = ["NetRise <anthony.feddersen@netrise.io>"]
 readme = "README.md"
@@ -19,6 +19,7 @@ python-dotenv = ">=1.0.0,<2.0.0"
 ariadne-codegen = {version = ">=0.17.0,<0.18.0", python = "<4"}
 graphql-core = {version = "==3.2.0", python = "<4"}
 pytest = ">=8.0.0,<9.0.0"
+pytest-cov = "^7.0.0"
 
 [tool.ariadne-codegen]
 schema_path = "../sdk-artifacts/schema.graphql"
